# tel-on-chain

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.claude/: settings.local.json
config/: config.toml  default.toml
crates/tel-api/: Cargo.toml
crates/tel-api/src/: api.rs  indexer.rs  lib.rs
crates/tel-api/src/routes/: mod.rs
crates/tel-core/: Cargo.toml
crates/tel-core/src/: config.rs  error.rs  lib.rs  models.rs  storage.rs  utils.rs
crates/tel-core/src/chain/: indexer.rs  providers.rs
crates/tel-core/src/core/: liquidity.rs  support_resistance.rs
crates/tel-core/src/db/: storage.rs
crates/tel-core/src/dexes/: balancer.rs  curve.rs  mod.rs  sdkExample.rs  sushiswap.rs  uniswap_v2.rs  uniswap_v3.rs  utils.rs
crates/tel-core/src/types/: mod.rs
crates/tel-core/test/: test_token_distribution.rs
crates/tel-indexer/: Cargo.toml
crates/tel-indexer/src/: lib.rs
crates/tel-ui/: Cargo.toml
crates/tel-ui/src/: app.rs  lib.rs  main.rs
dexscreener-extension/: contentScript.js  manifest.json
docs/: API_V1.md
scripts/: run-all.sh  run-api.sh  run-fetch.sh
src/: api.rs  error.rs  indexer.rs  lib.rs  main.rs  providers.rs  storage.rs  utils.rs
src/core/: liquidity.rs  mod.rs  support_resistance.rs
src/dexes/: balancer.rs  curve.rs  mod.rs  sushiswap.rs  uniswap_v2.rs  uniswap_v3.rs  utils.rs
tel-ui-web/: README.md  netlify.toml  package-lock.json  package.json
tel-ui-web/src/app/: layout.tsx  page.tsx
tel-ui-web/src/app/token-aggregate/: page.tsx
tel-ui-web/src/components/: LiquidityChart.tsx  PoolList.tsx  StatsSummary.tsx  TokenSelector.tsx
tel-ui-web/src/components/ui/: Button.tsx  Input.tsx  Pagination.tsx  Select.tsx
tel-ui-web/src/hooks/: useLiquidityData.ts  usePoolData.ts  useTokenAggregateData.ts
tel-ui-web/src/lib/: api.ts  constants.ts  utils.ts
tel-ui-web/src/types/: api.ts
testing/: api_test.rs
