[package]
name = "tel-on-chain"
version = "0.1.0"
edition = "2021"
description = "On-Chain Buy/Sell Wall Visualizer"
authors = ["tel-on-chain team"]
license = "MIT"

[dependencies]
# Basic utilities
tokio = { version = "1.31.0", features = ["full"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
config = "0.13.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["cors"] }
clap = { version = "4.4.6", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
num-bigint = "0.4.4"
num-traits = "0.2.16"
rust_decimal = "1.31.0"

[lib]
name = "tel_on_chain"
path = "src/lib.rs"

[[bin]]
name = "tel-on-chain"
path = "src/main.rs"
