[package]
name = "tel-api"
version = "0.1.0"
edition = "2021"
description = "API server for tel-on-chain"
authors = ["tel-on-chain team"]
license = "MIT"

[dependencies]
tel-core = { path = "../tel-core" }
rusqlite = "0.30"

# Server dependencies
axum = "0.6.18"
tower-http = { version = "0.4.0", features = ["cors"] }
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0.75"
alloy-primitives = "1.1.0"
chrono = { version = "0.4.31", features = ["serde"] }

[[bin]]
name = "tel-api"
path = "../../bin/tel-api/main.rs" 