[package]
name = "tel-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for tel-on-chain"
authors = ["tel-on-chain team"]
license = "MIT"

[dependencies]
# Basic utilities
tokio = { version = "1.31.0", features = ["full"] }
thiserror = "1.0.50"
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
config = "0.13.3"
dotenvy = "0.15.7"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = { version = "0.4.31", features = ["serde"] }
num-bigint = "0.4.4"
num-traits = "0.2.16"
rust_decimal = "1.31.0"
async-trait = "0.1.74"
# Alloy dependencies
alloy-primitives = { version = "1.0.1", features = ["serde"] }
alloy-sol-types = "1.0.1"
alloy-provider = "1.0.1"
alloy-rpc-client = "1.0.1"
alloy-transport-http = "1.0.1"
alloy-json-rpc = "1.0.1"
alloy-network = "1.0.1"
alloy-contract = "1.0.1"
alloy-rpc-types = "1.0.16"
reqwest = { version = "0.11", features = ["json"] }
uniswap-v3-sdk = { git = "https://github.com/shuhuiluo/uniswap-v3-sdk-rs.git", features = ["extensions", "std"] }
uniswap-sdk-core = "5.1.0"
futures = "0.3"
[lib]
name = "tel_core"
path = "src/lib.rs" 