[package]
name = "tel-indexer"
version = "0.1.0"
edition = "2021"
description = "Indexer component for tel-on-chain"
authors = ["tel-on-chain team"]
license = "MIT"

[dependencies]
tel-core = { path = "../tel-core" }

tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
alloy-primitives = "1.1.0"
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }

[[bin]]
name = "tel-indexer"
path = "../../bin/tel-indexer/main.rs" 