[package]
name = "tel-ui"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
poll-promise = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.30"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
alloy-primitives = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
tel-core = { path = "../tel-core" }

# UI dependencies
tracing = "0.1.37"
tracing-subscriber = "0.3.17" 